[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main/GUI/GameTheme.tres" type="Theme" id=1]
[ext_resource path="res://Main/GUI/DistanceLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main/GUI/GameOverPanel.gd" type="Script" id=3]
[ext_resource path="res://Main/GUI/AltitudeLabel.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main/GUI/Panel.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.560784, 0.0823529, 0.0823529, 1 ), Color( 1, 1, 1, 0.45098 ), Color( 0.619608, 0.0784314, 0.0784314, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.560784, 0.0823529, 0.0823529, 1 ), Color( 1, 1, 1, 0.45098 ), Color( 0.619608, 0.0784314, 0.0784314, 1 ) ]
}

[node name="GameOverPanel" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_top = 50.0
margin_right = -150.0
margin_bottom = -50.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" parent="." instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 660.0
margin_bottom = 500.0

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
margin_right = 600.0
margin_bottom = 440.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatisticsLabel" type="Label" parent="Control/MarginContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 51.0
theme = ExtResource( 1 )
text = "Busted!!!"

[node name="VBoxContainer" type="GridContainer" parent="Control/MarginContainer/VBoxContainer"]
margin_left = 432.0
margin_top = 55.0
margin_right = 600.0
margin_bottom = 216.0
size_flags_horizontal = 8
columns = 2

[node name="DistanceNewRecord" type="Label" parent="Control/MarginContainer/VBoxContainer/VBoxContainer"]
modulate = Color( 0.560784, 0.0823529, 0.0823529, 1 )
margin_bottom = 51.0
theme = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/MarginContainer/VBoxContainer/VBoxContainer/DistanceNewRecord"]
autoplay = "Blink"
anims/Blink = SubResource( 1 )

[node name="DistanceLabel" parent="Control/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_right = 168.0
margin_bottom = 51.0
script = null

[node name="AltitudeNewRecord" type="Label" parent="Control/MarginContainer/VBoxContainer/VBoxContainer"]
modulate = Color( 0.560784, 0.0823529, 0.0823529, 1 )
margin_top = 55.0
margin_bottom = 106.0
theme = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/MarginContainer/VBoxContainer/VBoxContainer/AltitudeNewRecord"]
autoplay = "Blink"
anims/Blink = SubResource( 2 )

[node name="AltitudeLabel" parent="Control/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 55.0
margin_right = 168.0
margin_bottom = 106.0
script = null

[node name="Label3" type="Label" parent="Control/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 128.0
margin_bottom = 142.0

[node name="MoneyLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 4.0
margin_top = 110.0
margin_right = 168.0
margin_bottom = 161.0
theme = ExtResource( 1 )
text = "$1234"
align = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
margin_left = 271.0
margin_top = 383.0
margin_right = 600.0
margin_bottom = 440.0
size_flags_horizontal = 8
size_flags_vertical = 10

[node name="StartButton" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 125.0
margin_bottom = 57.0
size_flags_horizontal = 0
theme = ExtResource( 1 )
text = "Replay"

[node name="QuitButton" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 129.0
margin_right = 329.0
margin_bottom = 57.0
theme = ExtResource( 1 )
text = "Quit to Menu"
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
